mule-user-guide/v/3.7/mel-cheat-sheet.adoc
= MEL Cheat Sheet
:keywords: mel, cheat, sheet

The following document reproduces the content from the original
link:_attachments/refcard-mel.pdf[Mule Expression Language (MEL) Reference card]. 
See also link:/mule-user-guide/v/3.7/mule-expression-language-reference[Mule Expression Language Reference].

== Prerequisites

This document assumes you are familiar with
link:/mule-user-guide/v/3.7/mule-expression-language-mel[Mule Expression Language (MEL)].

== Server, Mule, Application, and Message Variables

Overview of the global contexts and the variables to which they give access to.

[cols=",",options="header"]
|===
|server |mule |app |message
|fileSeparator |clusterId |encoding |ID
|host |home |name |rootId
|ip |nodeId |standalone |correlationId
|locale |version |workdir |correlationSequence
|javaVersion | |registry |correlationGroupSize
|javaVendor | | |replyTo
|osName | | |dataType
|osArch | | |payload
|osVersion | | |inboundProperties
|systemProperties | | |inboundAttachments
|timeZone | | |outboundProperties
|tmpDir | | |outboundAttachments
|userName | | |exception
|userHome | | |
|userDir | | |
|===

Create a directory named `target` in the system's temporary directory and set it as the current payload:

[source, xml, linenums]
----
<expression-component>
    targetDir = new java.io.File(server.tmpDir, 'target');
    targetDir.mkdir();
    payload = targetDir
</expression-component>
----

Set the username and password for an HTTP request at runtime based on inbound message properties:

[source, xml, linenums]
----
<http:request-config name="HTTP_Request_Configuration" host="api.acme.com/v1" port="8081" doc:name="HTTP">
  <http:basic-authentication username="#[message.inboundProperties.username]" password="#[message.inboundProperties.password]"/>
  </http:request-config>

  <flow>
    ...
    <http:request config-ref="request-config" path="users" doc:name="HTTP Connector"/>
    ...
  </flow>
----

== Variables, Integers, and Strings

* As a shortcut, Mule accepts an expression such as `\#[payload]`, rather than 
`#[message.payload]` because it knows to automatically evaluate the expression for the message context object. This shortcut only applies with the `payload` field.
* Mule assumes that any unquoted string contained in a Mule Expression is a flow variable. To set the value of flow variable 'foo' to 'bar', the expression `#[foo == bar]` actually evaluates as:
+
[source, code]
----
#[flowVars.foo == flowVars.bar]
----
+
* To access the flow variable, use one of the following expressions:
+
[source, code]
----
#[flowVars.foo]
----
+
[source, code]
----
#[foo]
----
+
* To create an integer:
+
[source, code]
----
#[12]
----
+
* To create a string:
+
[source, code]
----
#['mystring']
----

== Flow Variables

Flow variables are available in the flowVars context or directly as top level variables (unless autoResolveVariables is false or their name violates the MVEL naming conventions).

The following shows how a bean can be dynamically retrieved from the registry, based on a name created by taking a value from a bean payload with a getTargetService() accessor:

[source, xml, linenums]
----
<set-variable variableName="beanName" value="#[message.payload.targetService+'Processor']" />
<set-variable variableName="bean" value="#[app.registry[beanName]]" />
----

== Payload and Attachments

Copy the current payload in a flow variable named `originalPayload` then restore it:

[source, xml, linenums]
----
<set-variable variableName="originalPayload" value="#[message.payload]" />
<set-payload value="#[flowVars['originalPayload']]" />
----

To retrieve the message payload in a particular format, using Mule's auto-transformation capability, use `payloadAs`:

[source, xml]
----
<logger message="#[message.payloadAs(java.lang.String)]" />
----

To extract all *.txt and *.xml attachments, use a filtered projection:

[source, xml, linenums]
----
<expression-transformer expression="#[($.value in  message.inboundAttachments.entrySet() if $.key ~= '(.*\\.txt|.*\\.xml)')]" />
----

To ask for a null payload:

[source, code]
----
#[payload is NullPayload]
----

== Regex Support

Regular expression helper functions retrieve `null`, a single value or an array of values, depending on matches. The forms that take a `melExpression` argument apply the regex to the result of its evaluation instead of `message.payload`. For more information, see link:/mule-user-guide/v/3.7/mule-expression-language-reference#regex[MEL Regex].

[source, code]
----
#[regex(regularExpression [, melExpression [, matchFlags]])]
----

For example to select all the lines of the payload that begin with `To:`, `From:`, or `Cc:` use:

[source, code]
----
#[regex('^(To|From|Cc):')]
----

== XPath3 Support

XPath3 helper functions can return a DOM Node, or collection of DOM Nodes, or text.
For more information, see link:/mule-user-guide/v/3.7/xpath[XPath] and
link:/mule-user-guide/v/3.7/mule-expression-language-reference#xpath[MEL XPath].
By default the XPath3 expression is evaluated on `message.payload` unless an `xmlElement` is specified:

[source, code]
----
xpath3(xPathExpression [, xmlElement])
----

To get the text content of an element or an attribute:

[source, code, linenums]
----
#[xpath3('//title').text]
#[xpath3('//title/@id').value]
----

== JSON Processing

MEL has no direct support for JSON. The `json-to-object-transformer` can turn a JSON payload into a hierarchy of simple data structures that are easily parsed with MEL.

For the equivalent of this JSON path expression:

[source,code]
----
$..[? (@.title=='Moby Dick')].price
----

The following uses a filtered projection:

[source, xml, linenums]
----
<json:json-to-object-transformer returnClass="java.lang.Object" />
<expression-transformer
    expression='#[($.price in message.payload if $.title =='Moby Dick')[0]]" />
----

== Tests

* Return `true` if the `lastname` query string parameter from an HTTP listener is not `null`:
+
[source, code]
----
#[message.inboundProperties.'http.query.params'.lastname != null]
----

* Return the number of elements in `http.method`:
+
[source, code]
----
#[message.inboundProperties.'http.query.params'.size()]
----

* Return `true` if the number of elements in the map `http.query.params` is greater than 50:
+
[source, code]
----
#[message.inboundProperties.'http.query.params'.size() > 50]
----
+
* *Testing for Emptiness*: The special literal `empty` tests the emptiness of a value. It returns an empty value depending on context. `empty` evaluates to: +
** null
** boolean `false`
** empty strings or strings containing only white space
** zero
** empty collections
+
The expression `#[foo == empty]` evaluates to true if the value if `foo` satisfies any of the requirements for emptiness. +
 +
** *Testing for NullPayload*: Return true if message payload is null:
+
[source, code]
----
#[payload == null]
----

== Chained Elements

For chained methods or properties, the expression `#[[a.b.c] == 'foo']` evaluates correctly even in the case that `c` is a null value. However, if `b` is a null value, the expression throws a `NullPointerException`.

In this example, if a field named address is null, the expression throws a `NullPointerException`.

[source, code]
----
#[payload.address.zipcode]
----

To make this same expression `null` safe, use the .? operator.

[source, code]
----
#[payload.address.?zipcode]
----

Using this operator avoids a `NullPointerException` if address is an empty value, instead it returns `null`. 

If you'd like the expression to return a different value if no address is defined, you can use a chained `or` operator.

[source, code]
----
#[payload.address.?zipcode or 'Zipcode not set']
----

== Global Configuration

Define global imports, aliases and global functions in the global configuration element. Global functions can be loaded from the file system, a URL, or a classpath resource (see extraFunctions.mvel in line 6 below). Flow variables auto-binding can be turned off via the autoResolveVariables attribute in line 2.

[source, xml, linenums]
----
<configuration>
  <expression-language autoResolveVariables="false">
    <import class="org.mule.util.StringUtils" />
    <import name="rsu" class="org.apache.commons.lang.RandomStringUtils" />
    <alias name="appName" expression="app.name" />
    <global-functions file="extraFunctions.mvel">
      def reversePayload() { StringUtils.reverse(payload) }
      def randomString(size) { rsu.randomAlphanumeric(size) }
    </global-functions>
  </expression-language>
</configuration>
----

== Advanced Tips

=== Accessing the Cache

You can access the link:/mule-user-guide/v/3.7/cache-scope[Mule cache] through the object store that serves as the cache repository. Depending on the nature of the object store, you can count, list, remove, or perform other operations on entries.

The code below shows the XML representation of a cache scope that uses a custom object store class.

[source, xml, linenums]
----
<ee:object-store-caching-strategy name="CachingStrategy">
  <custom-object-storeclass="org.mule.util.store.SimpleMemoryObjectStore" />
</ee:object-store-caching-strategy>
----

The object store above is an implementation of a `ListableObjectStore`, which allows you to obtain lists of the entries it contains. You can access the contents of the cache by invoking the `getStore` method on the `CachingStrategy` property of `app.registry`.

The expression below obtains the size of the cache by invoking `allKeys()`, which returns an iterable list.

[source, code]
----
#[app.registry.CachingStrategy.getStore().allKeys().size()]"
----

If you need to manipulate the registry in a Java class, you can access it through `muleContext.getRegistry()`.

=== Boolean Operations Gotchas

* Boolean evaluations sometimes return unexpected responses, particularly when the value of a variable contains "garbage." See tables below.
+
[width="100%",cols="34%,33%,33%",options="header",]
|===
|*Expression* |*When value of `var1` is...* |*... The expression evaluates to...*
a|
`#[var1 == true]`

 |`'true'` |`true`
a|
`#[var1 == true]`

 |`'True'` `'false'` |`false`
a|
`#[var1 == true]`
 |`'u5hsmg930'` |`true`
|===
+
[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|*Expression* |*When the value of `something` is...* |*... And the value of `abc` is...* |*... MEL successfully evaluates the expression.*
|`#[payload.something.abc == 'b']` |`'something'` |`'null'` |✔
|`#[payload.something.abc == 'b']` |`'null'` |`'abc'` |*X* +
Produces a NullPointer exception
|===
+
Note also that, if given the expression `#[flowVars.abc.toString()]` and the value of '`abc`' is `null`, Mule throws a `NullPointerException`.

== Miscellaneous Operations

* Assign to variable `lastname` the value of the message inbound property `lastname`:
+
[source, code]
----
#[lastname = message.inboundProperties.lastname]
----
+
* Append a string to the message payload:
+
[source, code]
----
#[message.payload + 'mystring']
----
+
* Call a static method:
+
[source, code]
----
#[java.net.URLEncoder.encode()]
----
+
* Create a hash map:
+
[source, code]
----
#[new java.util.HashMap()]
----

== More MVEL Goodness

Quick access to the MVEL 2.0 Documentation: link:https://github.com/mvel/mvel[MVEL in Git] and
link:https://en.wikisource.org/wiki/MVEL_Language_Guide[MVEL Wikisource].

* *Java interoperability* - Creates a random UUID and use it as an XSL-T parameter:
+
[source, xml, linenums]
----
<mulexml:context-property key="transactionId"
         value="#[java.util.UUID.randomUUID().toString()]" />
----
+
* *Safe bean property navigation* - Retrieves `fullName` only if the `name` object is not null:
+
[source, xml]
----
<set-variable variableName="fullName" value="#[message.payload.?name.fullName]" />
----
+
* *Local variable assignment* - Works to split a multi-line payload into rows and drops the first row, as in this splitter expression:
+
[source, code, linenums]
----
splitter expression='#[rows=StringUtils.split(message.payload,'\n\r');
         ArrayUtil.subarray(rows,1,rows.size())]" />
----
+
* *Elvis operator* - Returns the first non-null value of a list of values:
+
[source, code]
----
#[message.payload.userName or message.payload.userId]
----

== See Also

* link:https://developer.mulesoft.com/anypoint-platform[Mule Community Edition]
* link:https://www.mulesoft.com/platform/studio[Anypoint Studio]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
